syntax = "proto3";
package pb;
option go_package = "./pb";
// Query .
message Query {
	string pattern = 1;
	uint32 maxCount = 2;
	Searcher searcher = 3;
	repeated string paths = 4;
	repeated string rgTypes = 5;
	repeated string agTypes = 6;
	repeated string ugTypes = 7;
	string grepType = 8;
}

enum Searcher {
	none = 0;
	rg = 1;
	ug = 2;
	ag = 3;
}